# BLE

ble_project/: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  setup_bluetooth.sh
ble_project/.cache/clangd/index/: ble_common.c.9D0D959A489A4F91.idx  ble_common.h.AA0F2A16D6D3B32A.idx  ble_connect.cpp.9CE8A2A0B52585B3.idx  ble_peripheral_notify.cpp.F7A7CF354AA9D92C.idx  ble_scan.cpp.6BA18E3739924FB1.idx  simple_peripheral.cpp.239D54389C86F5FB.idx
ble_project/.github/: pull_request_template.md
ble_project/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ble_project/.github/workflows/: ci.yml
ble_project/central/: README.md
ble_project/central/examples/: CMakeLists.txt  README.md
ble_project/central/examples/01_scan/: ble_scan.cpp
ble_project/central/examples/02_connect/: ble_connect.cpp
ble_project/core/: CMakeLists.txt  README.md
ble_project/core/include/: ble_common.h
ble_project/core/src/: ble_common.c
ble_project/docs/: .gitignore  BLE_COMPLETE_GUIDE.md  CMakeLists.txt  Doxyfile  README.md
ble_project/peripheral/: README.md
ble_project/peripheral/examples/: CMakeLists.txt  README.md
ble_project/peripheral/examples/01_simple_peripheral/: simple_peripheral.cpp
ble_project/peripheral/examples/02_notify/: ble_peripheral_notify.cpp
ble_project/scripts/: README.md  clean.sh  install_deps.sh  run_tests.sh
